fix: register high_assurance and e2e markers in pytest.ini
The markers were defined in pyproject.toml but pytest.ini takes
precedence. Added both markers to pytest.ini to fix warnings.

--- a/pytest.ini
+++ b/pytest.ini
@@ -15,4 +15,6 @@ addopts =
 markers =
     unit: Unit tests
     integration: Integration tests requiring live Globus services
+    e2e: End-to-end tests
     slow: Slow running tests
+    high_assurance: Tests requiring high-assurance authentication (MFA within 30 min)
