fix: install test dependencies before SDK to prevent conflicts
Changed installation order to:
1. Install project dependencies (including boto3 for S3 token storage)
2. Install specific SDK version with --no-deps to avoid conflicts

This prevents SDK v4 from interfering with boto3 installation,
which was causing all SDK v4 integration tests to be skipped.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,17 +78,17 @@ jobs:
         with:
           enable-cache: true
 
-      - name: Install SDK v${{ matrix.sdk-version }}
-        run: |
-          if [ "${{ matrix.sdk-version }}" = "3" ]; then
-            uv pip install --system "globus-sdk>=3.0.0,<4.0.0"
-          else
-            uv pip install --system "globus-sdk>=4.0.0"
-          fi
-
       - name: Install project dependencies
         run: |
           uv pip install --system -e ".[test]"
+
+      - name: Install SDK v${{ matrix.sdk-version }}
+        run: |
+          if [ "${{ matrix.sdk-version }}" = "3" ]; then
+            uv pip install --system --no-deps "globus-sdk>=3.0.0,<4.0.0"
+          else
+            uv pip install --system --no-deps "globus-sdk>=4.0.0"
+          fi
 
       - name: Display SDK version
         run: |
@@ -138,17 +138,17 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Install SDK v${{ matrix.sdk-version }}
-        run: |
-          if [ "${{ matrix.sdk-version }}" = "3" ]; then
-            uv pip install --system "globus-sdk>=3.0.0,<4.0.0"
-          else
-            uv pip install --system "globus-sdk>=4.0.0"
-          fi
-
       - name: Install project dependencies
         run: |
           uv pip install --system -e ".[test]"
+
+      - name: Install SDK v${{ matrix.sdk-version }}
+        run: |
+          if [ "${{ matrix.sdk-version }}" = "3" ]; then
+            uv pip install --system --no-deps "globus-sdk>=3.0.0,<4.0.0"
+          else
+            uv pip install --system --no-deps "globus-sdk>=4.0.0"
+          fi
 
       - name: Display SDK version
         run: |
