--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,18 @@ deps =
     boto3>=1.26.0
     sdk3: globus-sdk>=3.0.0,<4.0.0
     sdk4: globus-sdk>=4.0.0
+passenv =
+    S3_TOKEN_BUCKET
+    S3_TOKEN_KEY
+    S3_TOKEN_NAMESPACE
+    AWS_REGION
+    AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY
+    AWS_SESSION_TOKEN
+    GLOBUS_CLIENT_ID
+    GLOBUS_CLIENT_SECRET
+    GLOBUS_ADMIN_IDS
+    GLOBUS_SDK_ENVIRONMENT
 commands =
     python -c "import globus_sdk; print(f'Testing with Globus SDK {globus_sdk.__version__}')"
     pytest tests/unit/ -v {posargs}
