fix: use editable install in tox to access test support files
Changed from wheel package build to usedevelop=true so that tox
uses the source directory directly. This makes tests/s3_token_storage.py
accessible to integration tests without needing to package it.

This should fix the "boto3 not installed" skip messages which were
actually caused by s3_token_storage module not being importable.

--- a/tox.ini
+++ b/tox.ini
@@ -28,8 +28,7 @@ commands =
 description =
     sdk3: Run tests with Globus SDK v3
     sdk4: Run tests with Globus SDK v4
-package = wheel
-wheel_build_env = .pkg
+usedevelop = true
 deps =
     pytest>=7.0.0
     pytest-cov>=4.0.0
