fix: use single pytest command in tox to prevent duplicate runs
Changed from two separate pytest commands to one that accepts posargs.
This prevents tests from running twice when CI passes specific test paths.

The issue was that tox was running:
1. pytest tests/unit/ -v tests/integration/ -v ...  (unit+integration)
2. pytest tests/integration/ -v tests/integration/ -v ...  (integration twice)

Now it runs: pytest {provided_path_or_default} -v once.

--- a/tox.ini
+++ b/tox.ini
@@ -54,8 +54,7 @@ passenv =
     GLOBUS_SDK_ENVIRONMENT
 commands =
     python -c "import globus_sdk; print(f'Testing with Globus SDK {globus_sdk.__version__}')"
-    pytest tests/unit/ -v {posargs}
-    pytest tests/integration/ -v {posargs}
+    pytest {posargs:tests/unit tests/integration} -v
 
 [testenv:lint]
 deps =
