fix: explicitly set PYTHONPATH in tox for test module imports
Added setenv with PYTHONPATH to ensure tests/ and plugins/ directories
are accessible in tox environments. This should fix SDK v4 integration
tests which were failing to import s3_token_storage module.

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,8 @@ deps =
     boto3>=1.26.0
     sdk3: globus-sdk>=3.0.0,<4.0.0
     sdk4: globus-sdk>=4.0.0
+setenv =
+    PYTHONPATH = {toxinidir}{:}{toxinidir}/tests{:}{toxinidir}/plugins
 passenv =
     S3_TOKEN_BUCKET
     S3_TOKEN_KEY
