--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ passenv =
     GLOBUS_SDK_ENVIRONMENT
 commands =
     python -c "import globus_sdk; print(f'Testing with Globus SDK {globus_sdk.__version__}')"
-    pytest {posargs:tests/unit tests/integration} -v
+    pytest -v {posargs}
 
 [testenv:lint]
 deps =
