docs: clarify deletion limitation is due to temporary Globus Auth bug
Updated all documentation, error messages, and comments to indicate that
the high-assurance authentication requirement for project/client deletion
is a known bug in Globus Auth that may be resolved in the future.

Changes:
- Added BUG/TODO comments in code for future re-enablement
- Updated error messages to mention this is temporary
- Updated module documentation
- Updated example playbook cleanup instructions
- Updated test comments

This makes it clear to users and maintainers that:
1. This is a workaround for a bug, not a design decision
2. The functionality can be restored when auth service is fixed
3. Service clients should be able to delete resources once bug is resolved

--- a/examples/auth_client_test.yml
+++ b/examples/auth_client_test.yml
@@ -145,8 +145,9 @@
           - "✅ All OAuth client tests completed successfully!"
           - ""
           - "⚠️  CLEANUP REQUIRED: Manual deletion needed"
-          - "Deleting projects and OAuth clients requires high-assurance authentication"
-          - "(MFA within 30 minutes) and cannot be done via Ansible."
+          - "Due to a known bug in Globus Auth, service clients cannot delete projects"
+          - "or OAuth clients (requires high-assurance authentication/MFA within 30 min)."
+          - "This limitation may be resolved in a future release."
           - ""
           - "To clean up these test resources:"
           - "1. Go to https://app.globus.org/settings/developers"
