feat: add Ansible Galaxy publishing support via tox
Add tox environments for building and publishing to Ansible Galaxy:
- galaxy-build: Build collection tarball
- galaxy-test: Test build and local installation
- galaxy-publish: Publish to Galaxy (requires ANSIBLE_GALAXY_TOKEN)

Update galaxy.yml with correct repository URLs (m1yag1/ansible-globus)
Add Publishing section to README.md with tox command documentation

--- a/tox.ini
+++ b/tox.ini
@@ -205,3 +205,47 @@ commands =
         -e aws_region={env:AWS_REGION:us-east-1} \
         -e environment={env:ENVIRONMENT:ci} \
         -e state=absent
+
+# Ansible Galaxy publishing environments
+[testenv:galaxy-build]
+description = Build Ansible collection for Galaxy
+skip_install = true
+deps =
+    ansible-core>=2.16.0
+allowlist_externals =
+    rm
+commands_pre =
+    rm -f community-globus-*.tar.gz
+commands =
+    ansible-galaxy collection build --force --output-path .
+    python -c "import os; print('\n=== Build Complete ==='); print([f for f in os.listdir('.') if f.endswith('.tar.gz')][0])"
+
+[testenv:galaxy-publish]
+description = Publish collection to Ansible Galaxy (requires ANSIBLE_GALAXY_TOKEN)
+skip_install = true
+deps =
+    ansible-core>=2.16.0
+passenv =
+    ANSIBLE_GALAXY_TOKEN
+allowlist_externals =
+    rm
+commands_pre =
+    rm -f community-globus-*.tar.gz
+commands =
+    ansible-galaxy collection build --force --output-path .
+    ansible-galaxy collection publish community-globus-*.tar.gz --token {env:ANSIBLE_GALAXY_TOKEN}
+
+[testenv:galaxy-test]
+description = Test collection build and installation locally
+skip_install = true
+deps =
+    ansible-core>=2.16.0
+allowlist_externals =
+    rm
+commands_pre =
+    rm -f community-globus-*.tar.gz
+commands =
+    ansible-galaxy collection build --force --output-path .
+    ansible-galaxy collection install community-globus-*.tar.gz --force
+    ansible-galaxy collection list community.globus
+    python -c "print('\n=== Test installation successful ===')"
