fix: use _build directory for Galaxy builds and fix glob expansion
- Create _build/ directory for collection tarballs (added to .gitignore)
- Use bash -c to properly expand glob patterns in ansible-galaxy install
- Prevents glob pattern from being treated as literal filename
- Keeps build artifacts separate from source code

Tested with: tox -e galaxy-test

--- a/tox.ini
+++ b/tox.ini
@@ -214,11 +214,13 @@ deps =
     ansible-core>=2.16.0
 allowlist_externals =
     rm
+    mkdir
 commands_pre =
-    rm -f community-globus-*.tar.gz
+    mkdir -p _build
+    rm -f _build/community-globus-*.tar.gz
 commands =
-    ansible-galaxy collection build --force --output-path .
-    python -c "import os; print('\n=== Build Complete ==='); print([f for f in os.listdir('.') if f.endswith('.tar.gz')][0])"
+    ansible-galaxy collection build --force --output-path _build
+    python -c "import os; print('\n=== Build Complete ==='); print([f for f in os.listdir('_build') if f.endswith('.tar.gz')][0])"
 
 [testenv:galaxy-publish]
 description = Publish collection to Ansible Galaxy (requires ANSIBLE_GALAXY_TOKEN)
@@ -229,11 +231,14 @@ passenv =
     ANSIBLE_GALAXY_TOKEN
 allowlist_externals =
     rm
+    mkdir
+    bash
 commands_pre =
-    rm -f community-globus-*.tar.gz
+    mkdir -p _build
+    rm -f _build/community-globus-*.tar.gz
 commands =
-    ansible-galaxy collection build --force --output-path .
-    ansible-galaxy collection publish community-globus-*.tar.gz --token {env:ANSIBLE_GALAXY_TOKEN}
+    ansible-galaxy collection build --force --output-path _build
+    bash -c 'ansible-galaxy collection publish _build/community-globus-*.tar.gz --token {env:ANSIBLE_GALAXY_TOKEN}'
 
 [testenv:galaxy-test]
 description = Test collection build and installation locally
@@ -242,10 +247,13 @@ deps =
     ansible-core>=2.16.0
 allowlist_externals =
     rm
+    mkdir
+    bash
 commands_pre =
-    rm -f community-globus-*.tar.gz
+    mkdir -p _build
+    rm -f _build/community-globus-*.tar.gz
 commands =
-    ansible-galaxy collection build --force --output-path .
-    ansible-galaxy collection install community-globus-*.tar.gz --force
+    ansible-galaxy collection build --force --output-path _build
+    bash -c 'ansible-galaxy collection install _build/community-globus-*.tar.gz --force'
     ansible-galaxy collection list community.globus
     python -c "print('\n=== Test installation successful ===')"
