--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
   push:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  release:
-    types: [ published ]
   workflow_dispatch:
 
 env:
@@ -241,96 +239,10 @@ jobs:
                   print(f'Could not check: {url}')
           "
 
-  build:
-    name: Build Collection
-    runs-on: ubuntu-latest
-    needs: [lint, test, integration]
-    if: always() && needs.lint.result == 'success' && needs.test.result == 'success' && (needs.integration.result == 'success' || needs.integration.result == 'skipped')
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install Ansible
-        run: |
-          python -m pip install --upgrade pip
-          pip install "ansible${{ env.ANSIBLE_VERSION }}"
-
-      - name: Create galaxy.yml
-        run: |
-          cat > galaxy.yml << EOF
-          namespace: community
-          name: globus
-          version: 1.0.0
-          readme: README.md
-          authors:
-            - "Ansible Globus Module Contributors"
-          description: "Ansible collection for managing Globus infrastructure"
-          license:
-            - "Apache-2.0"
-          license_file: LICENSE
-          tags:
-            - globus
-            - data_transfer
-            - research
-            - hpc
-          dependencies: {}
-          repository: "https://github.com/your-org/ansible-globus"
-          documentation: "https://github.com/your-org/ansible-globus/blob/main/README.md"
-          homepage: "https://github.com/your-org/ansible-globus"
-          issues: "https://github.com/your-org/ansible-globus/issues"
-          EOF
-
-      - name: Build collection
-        run: |
-          ansible-galaxy collection build
-
-      - name: Upload collection artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ansible-collection
-          path: "*.tar.gz"
-
-  deploy:
-    name: Deploy to Galaxy
-    runs-on: ubuntu-latest
-    needs: [lint, test, integration, build]
-    if: github.event_name == 'release' && needs.integration.result == 'success'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install Ansible
-        run: |
-          python -m pip install --upgrade pip
-          pip install "ansible${{ env.ANSIBLE_VERSION }}"
-
-      - name: Download collection artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: ansible-collection
-
-      - name: Publish to Galaxy
-        env:
-          ANSIBLE_GALAXY_API_KEY: ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
-        run: |
-          ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_GALAXY_API_KEY
-
   notify:
     name: Notification
     runs-on: ubuntu-latest
-    needs: [lint, test, integration, security, docs, build]
+    needs: [lint, test, integration, security, docs]
     if: always()
 
     steps:
