--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release to Ansible Galaxy
 
 on:
   push:
@@ -6,45 +6,171 @@ on:
       - 'v*'
 
 env:
-  PYTHON_VERSION: "3.9"
+  PYTHON_VERSION: "3.12"
 
 jobs:
-  create_release:
-    name: Create Release
+  validate:
+    name: Validate Release
     runs-on: ubuntu-latest
-
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      version: ${{ steps.get_version.outputs.version }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+        uses: actions/checkout@v4
 
       - name: Get version from tag
         id: get_version
         run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "Version: $VERSION"
+          TAG_VERSION=${GITHUB_REF#refs/tags/v}
+          echo "tag_version=$TAG_VERSION" >> $GITHUB_OUTPUT
+          echo "Tag version: $TAG_VERSION"
 
-      - name: Generate changelog
-        id: changelog
+      - name: Get version from galaxy.yml
+        id: get_galaxy_version
         run: |
-          # Generate changelog from git commits since last tag
-          LAST_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
-          if [ -z "$LAST_TAG" ]; then
-            CHANGES=$(git log --pretty=format:"- %s (%h)" --reverse)
+          GALAXY_VERSION=$(grep '^version:' galaxy.yml | awk '{print $2}' | tr -d '"')
+          echo "galaxy_version=$GALAXY_VERSION" >> $GITHUB_OUTPUT
+          echo "Galaxy version: $GALAXY_VERSION"
+
+      - name: Verify version match
+        run: |
+          if [ "${{ steps.get_version.outputs.tag_version }}" != "${{ steps.get_galaxy_version.outputs.galaxy_version }}" ]; then
+            echo "❌ Version mismatch!"
+            echo "   Git tag: v${{ steps.get_version.outputs.tag_version }}"
+            echo "   galaxy.yml: ${{ steps.get_galaxy_version.outputs.galaxy_version }}"
+            echo ""
+            echo "Please update galaxy.yml version to match the git tag."
+            exit 1
+          fi
+          echo "✅ Version match confirmed: ${{ steps.get_version.outputs.tag_version }}"
+
+      - name: Check CHANGELOG.md
+        run: |
+          if ! grep -q "\[${{ steps.get_version.outputs.tag_version }}\]" CHANGELOG.md; then
+            echo "⚠️ Warning: Version ${{ steps.get_version.outputs.tag_version }} not found in CHANGELOG.md"
+            echo "Please update CHANGELOG.md before releasing"
           else
-            CHANGES=$(git log --pretty=format:"- %s (%h)" --reverse ${LAST_TAG}..HEAD)
+            echo "✅ CHANGELOG.md contains entry for ${{ steps.get_version.outputs.tag_version }}"
           fi
 
-          cat > CHANGELOG.md << EOF
-          # Changes in v${{ steps.get_version.outputs.version }}
+  build:
+    name: Build Collection
+    runs-on: ubuntu-latest
+    needs: validate
 
-          $CHANGES
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Install tox
+        run: |
+          uv pip install --system tox tox-uv
+
+      - name: Build collection with tox
+        run: |
+          tox -e galaxy-build
+
+      - name: Verify build
+        run: |
+          ls -lh _build/
+          if [ ! -f _build/community-globus-*.tar.gz ]; then
+            echo "❌ Build failed: tarball not found"
+            exit 1
+          fi
+          echo "✅ Build successful"
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ansible-collection
+          path: _build/community-globus-*.tar.gz
+          retention-days: 5
+
+  publish-galaxy:
+    name: Publish to Ansible Galaxy
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Install dependencies
+        run: |
+          uv pip install --system tox tox-uv ansible-core>=2.16.0
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ansible-collection
+          path: _build/
+
+      - name: Publish to Ansible Galaxy
+        env:
+          ANSIBLE_GALAXY_TOKEN: ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
+        run: |
+          if [ -z "$ANSIBLE_GALAXY_TOKEN" ]; then
+            echo "❌ ANSIBLE_GALAXY_TOKEN not set"
+            echo "Please add your Ansible Galaxy token to GitHub secrets"
+            exit 1
+          fi
+
+          # Use bash to expand glob pattern
+          bash -c 'ansible-galaxy collection publish _build/community-globus-*.tar.gz --token $ANSIBLE_GALAXY_TOKEN'
+          echo "✅ Published to Ansible Galaxy"
+
+  create-github-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: [validate, build, publish-galaxy]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get version
+        id: get_version
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ansible-collection
+          path: _build/
+
+      - name: Extract release notes from CHANGELOG
+        id: changelog
+        run: |
+          # Extract release notes for this version from CHANGELOG.md
+          if grep -q "\[${{ steps.get_version.outputs.version }}\]" CHANGELOG.md; then
+            # Extract section for this version
+            awk '/\[${{ steps.get_version.outputs.version }}\]/,/^## \[/{print}' CHANGELOG.md | sed '$d' > release_notes.md
+
+            # Add installation instructions
+            cat >> release_notes.md << EOF
 
           ## Installation
 
@@ -54,204 +180,121 @@ jobs:
 
           ## Documentation
 
-          See the [README](https://github.com/your-org/ansible-globus/blob/v${{ steps.get_version.outputs.version }}/README.md) for full documentation.
+          See the [README](https://github.com/m1yag1/ansible-globus/blob/v${{ steps.get_version.outputs.version }}/README.md) for full documentation.
           EOF
+          else
+            # Fallback to generic message if CHANGELOG not updated
+            cat > release_notes.md << EOF
+          Release v${{ steps.get_version.outputs.version }} of the Ansible Globus Collection.
 
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          cat CHANGELOG.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          ## Installation
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          \`\`\`bash
+          ansible-galaxy collection install community.globus:${{ steps.get_version.outputs.version }}
+          \`\`\`
+
+          ## Documentation
+
+          See the [README](https://github.com/m1yag1/ansible-globus/blob/main/README.md) for full documentation.
+          EOF
+          fi
+
+          cat release_notes.md
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release v${{ steps.get_version.outputs.version }}
-          body: ${{ steps.changelog.outputs.changelog }}
+          name: Release v${{ steps.get_version.outputs.version }}
+          body_path: release_notes.md
+          files: _build/community-globus-*.tar.gz
           draft: false
-          prerelease: false
+          prerelease: ${{ contains(steps.get_version.outputs.version, '-') }}
+          generate_release_notes: false
 
-  build_and_upload:
-    name: Build and Upload Collection
+  test-installation:
+    name: Test Installation from Galaxy
     runs-on: ubuntu-latest
-    needs: create_release
+    needs: publish-galaxy
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install Ansible
         run: |
           python -m pip install --upgrade pip
-          pip install ansible-core
+          pip install ansible-core>=2.16.0
 
-      - name: Create galaxy.yml with version
+      - name: Get version
+        id: get_version
         run: |
-          cat > galaxy.yml << EOF
-          namespace: community
-          name: globus
-          version: ${{ needs.create_release.outputs.version }}
-          readme: README.md
-          authors:
-            - "Ansible Globus Module Contributors"
-          description: "Ansible collection for managing Globus infrastructure"
-          license:
-            - "Apache-2.0"
-          license_file: LICENSE
-          tags:
-            - globus
-            - data_transfer
-            - research
-            - hpc
-            - automation
-          dependencies: {}
-          repository: "https://github.com/your-org/ansible-globus"
-          documentation: "https://github.com/your-org/ansible-globus/blob/main/README.md"
-          homepage: "https://github.com/your-org/ansible-globus"
-          issues: "https://github.com/your-org/ansible-globus/issues"
-          build_ignore:
-            - "*.pyc"
-            - "__pycache__"
-            - ".git"
-            - ".github"
-            - "tests/"
-            - "*.tar.gz"
-          EOF
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Build collection
+      - name: Wait for Galaxy indexing
         run: |
-          ansible-galaxy collection build
-          ls -la *.tar.gz
+          echo "⏳ Waiting 60 seconds for Galaxy to index the new release..."
+          sleep 60
 
-      - name: Upload collection to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: ./community-globus-${{ needs.create_release.outputs.version }}.tar.gz
-          asset_name: community-globus-${{ needs.create_release.outputs.version }}.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Publish to Ansible Galaxy
-        env:
-          ANSIBLE_GALAXY_API_KEY: ${{ secrets.ANSIBLE_GALAXY_API_KEY }}
+      - name: Install collection from Galaxy
         run: |
-          if [ -n "$ANSIBLE_GALAXY_API_KEY" ]; then
-            ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_GALAXY_API_KEY
-            echo "✅ Published to Ansible Galaxy"
-          else
-            echo "⚠️ ANSIBLE_GALAXY_API_KEY not set, skipping Galaxy publication"
-          fi
+          ansible-galaxy collection install community.globus:${{ steps.get_version.outputs.version }}
+          echo "✅ Collection installed successfully"
 
-  update_documentation:
-    name: Update Documentation
-    runs-on: ubuntu-latest
-    needs: [create_release, build_and_upload]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update version in README
+      - name: Verify installation
         run: |
-          sed -i 's/ansible-galaxy collection install community\.globus.*/ansible-galaxy collection install community.globus:${{ needs.create_release.outputs.version }}/' README.md
-
-      - name: Create version badge
-        run: |
-          curl -s "https://img.shields.io/badge/version-v${{ needs.create_release.outputs.version }}-blue.svg" > version-badge.svg
-
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add README.md
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Update documentation for v${{ needs.create_release.outputs.version }}"
-            git push origin main
-          fi
-
-  test_installation:
-    name: Test Installation
-    runs-on: ubuntu-latest
-    needs: [create_release, build_and_upload]
-    strategy:
-      matrix:
-        ansible-version: [">=4.0.0", ">=5.0.0", ">=6.0.0"]
-
-    steps:
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install Ansible
-        run: |
-          python -m pip install --upgrade pip
-          pip install "ansible${{ matrix.ansible-version }}"
-
-      - name: Test collection installation from GitHub
-        run: |
-          # Install from GitHub release
-          ansible-galaxy collection install \
-            https://github.com/your-org/ansible-globus/releases/download/v${{ needs.create_release.outputs.version }}/community-globus-${{ needs.create_release.outputs.version }}.tar.gz
-
-          # Verify installation
           ansible-galaxy collection list | grep community.globus
+          INSTALLED_VERSION=$(ansible-galaxy collection list | grep community.globus | awk '{print $2}')
+          echo "Installed version: $INSTALLED_VERSION"
 
-      - name: Test basic module import
-        run: |
-          # Create a simple test playbook
-          cat > test-playbook.yml << EOF
-          ---
-          - name: Test Globus modules import
-            hosts: localhost
-            connection: local
-            gather_facts: false
-            tasks:
-              - name: Test module syntax
-                debug:
-                  msg: "Testing Globus collection v${{ needs.create_release.outputs.version }}"
-          EOF
+          if [ "$INSTALLED_VERSION" != "${{ steps.get_version.outputs.version }}" ]; then
+            echo "⚠️ Version mismatch: expected ${{ steps.get_version.outputs.version }}, got $INSTALLED_VERSION"
+            exit 1
+          fi
+          echo "✅ Version verification passed"
 
-          # Test playbook syntax
-          ansible-playbook test-playbook.yml --syntax-check
-
-  notify_completion:
-    name: Notify Release Completion
+  notify:
+    name: Release Summary
     runs-on: ubuntu-latest
-    needs: [create_release, build_and_upload, update_documentation, test_installation]
+    needs: [validate, build, publish-galaxy, create-github-release, test-installation]
     if: always()
 
     steps:
-      - name: Release Summary
+      - name: Get version
+        id: get_version
         run: |
-          echo "🚀 Release v${{ needs.create_release.outputs.version }} Summary:"
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Success summary
+        if: ${{ !contains(needs.*.result, 'failure') }}
+        run: |
+          echo "🚀 Release v${{ steps.get_version.outputs.version }} completed successfully!"
           echo ""
-          echo "✅ Release created: ${{ needs.create_release.result }}"
-          echo "✅ Collection built and uploaded: ${{ needs.build_and_upload.result }}"
-          echo "✅ Documentation updated: ${{ needs.update_documentation.result }}"
-          echo "✅ Installation tested: ${{ needs.test_installation.result }}"
+          echo "✅ Validation: ${{ needs.validate.result }}"
+          echo "✅ Build: ${{ needs.build.result }}"
+          echo "✅ Publish to Galaxy: ${{ needs.publish-galaxy.result }}"
+          echo "✅ GitHub Release: ${{ needs.create-github-release.result }}"
+          echo "✅ Installation Test: ${{ needs.test-installation.result }}"
           echo ""
           echo "📦 Collection available at:"
-          echo "   - GitHub Release: https://github.com/your-org/ansible-globus/releases/tag/v${{ needs.create_release.outputs.version }}"
-          echo "   - Ansible Galaxy: https://galaxy.ansible.com/community/globus"
+          echo "   - Ansible Galaxy: https://galaxy.ansible.com/ui/repo/published/community/globus/"
+          echo "   - GitHub Release: https://github.com/m1yag1/ansible-globus/releases/tag/v${{ steps.get_version.outputs.version }}"
           echo ""
-          echo "📚 Documentation: https://github.com/your-org/ansible-globus/blob/main/README.md"
+          echo "📚 Documentation: https://github.com/m1yag1/ansible-globus/blob/main/README.md"
 
-      - name: Check for failures
+      - name: Failure summary
         if: ${{ contains(needs.*.result, 'failure') }}
         run: |
-          echo "❌ Some release steps failed. Please check the logs and consider creating a patch release."
+          echo "❌ Release v${{ steps.get_version.outputs.version }} encountered failures"
+          echo ""
+          echo "Validation: ${{ needs.validate.result }}"
+          echo "Build: ${{ needs.build.result }}"
+          echo "Publish to Galaxy: ${{ needs.publish-galaxy.result }}"
+          echo "GitHub Release: ${{ needs.create-github-release.result }}"
+          echo "Installation Test: ${{ needs.test-installation.result }}"
+          echo ""
+          echo "Please check the logs and fix any issues before retrying."
           exit 1
