fix: ensure clean _build directory in Galaxy tox environments
Replace glob pattern rm with 'rm -rf _build' to ensure old version
tarballs are removed before building. This prevents ansible-galaxy from
seeing multiple versions and failing with dependency resolution errors.

Tested with: tox -e galaxy-test

--- a/tox.ini
+++ b/tox.ini
@@ -215,9 +215,10 @@ deps =
 allowlist_externals =
     rm
     mkdir
+    bash
 commands_pre =
+    rm -rf _build
     mkdir -p _build
-    rm -f _build/community-globus-*.tar.gz
 commands =
     ansible-galaxy collection build --force --output-path _build
     python -c "import os; print('\n=== Build Complete ==='); print([f for f in os.listdir('_build') if f.endswith('.tar.gz')][0])"
@@ -234,8 +235,8 @@ allowlist_externals =
     mkdir
     bash
 commands_pre =
+    rm -rf _build
     mkdir -p _build
-    rm -f _build/community-globus-*.tar.gz
 commands =
     ansible-galaxy collection build --force --output-path _build
     bash -c 'ansible-galaxy collection publish _build/community-globus-*.tar.gz --token {env:ANSIBLE_GALAXY_TOKEN}'
@@ -250,8 +251,8 @@ allowlist_externals =
     mkdir
     bash
 commands_pre =
+    rm -rf _build
     mkdir -p _build
-    rm -f _build/community-globus-*.tar.gz
 commands =
     ansible-galaxy collection build --force --output-path _build
     bash -c 'ansible-galaxy collection install _build/community-globus-*.tar.gz --force'
