feat(changelog): add automated changelog generation with git-cliff
Add git-cliff configuration for automated changelog generation from
conventional commits:
- cliff.toml: Configuration following Keep a Changelog format
- Tox environments for preview and update
- Updated README with release workflow instructions

Changelog can now be automatically generated from commit history:
- Preview: tox -e changelog-generate -- 0.2.0
- Update: tox -e changelog-update -- 0.2.0

Requires git-cliff installation: brew install git-cliff

--- a/tox.ini
+++ b/tox.ini
@@ -206,6 +206,31 @@ commands =
         -e environment={env:ENVIRONMENT:ci} \
         -e state=absent
 
+# Changelog generation
+[testenv:changelog]
+description = Generate CHANGELOG.md from conventional commits using git-cliff
+skip_install = true
+allowlist_externals =
+    git-cliff
+commands =
+    git-cliff --help
+
+[testenv:changelog-generate]
+description = Generate and preview changelog without writing to file
+skip_install = true
+allowlist_externals =
+    git-cliff
+commands =
+    git-cliff --unreleased --tag v{posargs:0.2.0}
+
+[testenv:changelog-update]
+description = Update CHANGELOG.md with new version
+skip_install = true
+allowlist_externals =
+    git-cliff
+commands =
+    git-cliff --tag v{posargs:0.2.0} --output CHANGELOG.md
+
 # Ansible Galaxy publishing environments
 [testenv:galaxy-build]
 description = Build Ansible collection for Galaxy
