fix(hooks): disable ansible-lint in pre-commit
ansible-lint has persistent dependency issues in pre-commit environments.
Since it already runs in CI via 'tox -e lint', removing it from pre-commit
hooks avoids false failures while maintaining test coverage.

This resolves the need to use --no-verify on commits.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,12 +26,16 @@ repos:
       - id: yamllint
         args: [-c=.yamllint.yml]
 
-  - repo: https://github.com/ansible/ansible-lint
-    rev: v6.17.2
-    hooks:
-      - id: ansible-lint
-        files: \.(yaml|yml)$
-        args: [--exclude=.github/]
+  # ansible-lint disabled in pre-commit due to dependency issues
+  # It runs in CI via: tox -e lint
+  # - repo: https://github.com/ansible/ansible-lint
+  #   rev: v6.17.2
+  #   hooks:
+  #     - id: ansible-lint
+  #       files: \.(yaml|yml)$
+  #       args: [--exclude=.github/]
+  #       additional_dependencies:
+  #         - ansible-core>=2.16.0
 
   - repo: https://github.com/pycqa/bandit
     rev: 1.7.5
