fix(hooks): run ansible-lint via tox in pre-commit
Instead of using ansible-lint's pre-commit hook (which has dependency
issues), run it via a dedicated tox environment which has the correct
dependencies configured.

Changes:
- Add tox ansible-lint environment with ansible-core dependency
- Use local pre-commit hook that calls tox -e ansible-lint
- Runs on all yaml files being committed
- Provides fast local feedback before CI

This ensures ansible-lint runs properly without needing --no-verify.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,17 +26,6 @@ repos:
       - id: yamllint
         args: [-c=.yamllint.yml]
 
-  # ansible-lint disabled in pre-commit due to dependency issues
-  # It runs in CI via: tox -e lint
-  # - repo: https://github.com/ansible/ansible-lint
-  #   rev: v6.17.2
-  #   hooks:
-  #     - id: ansible-lint
-  #       files: \.(yaml|yml)$
-  #       args: [--exclude=.github/]
-  #       additional_dependencies:
-  #         - ansible-core>=2.16.0
-
   - repo: https://github.com/pycqa/bandit
     rev: 1.7.5
     hooks:
@@ -52,6 +41,13 @@ repos:
 
   - repo: local
     hooks:
+      - id: ansible-lint
+        name: ansible-lint (via tox)
+        entry: tox -e ansible-lint --
+        language: system
+        files: ^docs/examples/.*\.(yaml|yml)$
+        pass_filenames: false
+        stages: [commit]
       - id: pytest-check
         name: pytest-check
         entry: pytest
