--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,14 @@ commands =
     yamllint docs/examples/ .github/workflows/
     ansible-lint docs/examples/
 
+[testenv:ansible-lint]
+description = Run ansible-lint on playbook examples
+deps =
+    ansible-core>=2.16.0
+    ansible-lint>=6.0.0
+commands =
+    ansible-lint {posargs:docs/examples/}
+
 [testenv:format]
 deps =
     ruff>=0.1.0
