feat(release): add automated release workflow
Add two-step automated release process:

Step 1: tox -e prepare-release
- Auto-detects version bump from conventional commits
  - feat → minor bump (0.1.0 → 0.2.0)
  - fix → patch bump (0.1.0 → 0.1.1)
- Generates CHANGELOG.md with git-cliff
- Updates galaxy.yml version
- Allows manual override: --patch, --minor, or explicit version
- Leaves files unstaged for review

Step 2: tox -e release
- Validates changes are ready
- Runs tox -e galaxy-test
- Commits, tags, and pushes to GitHub
- Asks for confirmation before pushing

Benefits:
- Automated version detection from commits
- Built-in review step between prepare and release
- Consistent release process
- Reduces manual errors

Updated documentation:
- README.md with simplified release steps
- RELEASING.md with new automated workflow
- Release checklist updated

Fixes:
- ruff issue with lstrip() → removeprefix()
- bandit pre-commit hook missing pbr dependency
- bandit warnings with nosec comments for release scripts

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,6 +32,7 @@ repos:
       - id: bandit
         args: [--recursive, --skip, "B101,B601"]
         exclude: ^tests/
+        additional_dependencies: ['pbr']
 
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v3.4.0
