--- a/tox.ini
+++ b/tox.ini
@@ -214,30 +214,27 @@ commands =
         -e environment={env:ENVIRONMENT:ci} \
         -e state=absent
 
-# Changelog generation
-[testenv:changelog]
-description = Generate CHANGELOG.md from conventional commits using git-cliff
+# Release automation
+[testenv:prepare-release]
+description = Prepare a release (update CHANGELOG.md and galaxy.yml)
 skip_install = true
 allowlist_externals =
+    python
     git-cliff
 commands =
-    git-cliff --help
+    python scripts/prepare_release.py {posargs}
 
-[testenv:changelog-generate]
-description = Generate and preview changelog without writing to file
+[testenv:release]
+description = Complete the release (commit, tag, push)
 skip_install = true
+deps =
+    {[testenv:galaxy-test]deps}
 allowlist_externals =
-    git-cliff
+    python
+    git
+    tox
 commands =
-    git-cliff --unreleased --tag v{posargs:0.2.0}
-
-[testenv:changelog-update]
-description = Update CHANGELOG.md with new version
-skip_install = true
-allowlist_externals =
-    git-cliff
-commands =
-    git-cliff --tag v{posargs:0.2.0} --output CHANGELOG.md
+    python scripts/release.py
 
 # Ansible Galaxy publishing environments
 [testenv:galaxy-build]
