--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,7 +186,7 @@ jobs:
 
       - name: Run Safety vulnerability check
         run: |
-          safety check --json --output safety-report.json
+          safety check --output json > safety-report.json
         continue-on-error: true
 
       - name: Upload security reports
