fix: change namespace from community to m1yag1
The community namespace requires Ansible community approval. Using m1yag1
namespace for initial releases. Updated all references throughout codebase.

Also fixed bandit warnings in globus_auth.py for try-except-pass blocks.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,7 +138,7 @@ jobs:
 
       - name: Install Ansible collection
         run: |
-          ansible-galaxy collection install community-globus-*.tar.gz --force
+          ansible-galaxy collection install m1yag1-globus-*.tar.gz --force
 
       - name: Run integration tests with tox
         env:
