--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,6 +142,8 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: [validate, build, publish-galaxy]
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout code
