test: improve GCS integration test support
- Add fallback scope handling for clients with limited permissions
- Pass GCS environment variables through tox for integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,10 @@ passenv =
     GLOBUS_CLIENT_SECRET
     GLOBUS_ADMIN_IDS
     GLOBUS_SDK_ENVIRONMENT
+    TEST_GCS_HOST
+    TEST_GCS_SSH_USER
+    TEST_GCS_PROJECT_ID
+    TEST_GCS_SUBSCRIPTION_ID
 commands =
     python -c "import globus_sdk; print(f'Testing with Globus SDK {globus_sdk.__version__}')"
     pytest -v {posargs}
